aarch64: fails to build from source

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • Environment:

      aarch64 development board

    • b81
    • aarch64
    • linux

        The jdk9 aarch64 hs-comp and dev trees fail to build with the error

        macroAssembler_aarch64.o: In function `MacroAssembler::patch_oop(unsigned char*, unsigned char*)':
        $HOME/openjdk/jdk9/dev/hotspot/src/cpu/aarch64/vm/macroAssembler_aarch64.cpp:168: undefined reference to `oopDesc::encode_heap_oop(oopDesc*)'
        collect2: error: ld returned 1 exit status

              Assignee:
              Ed Nevill
              Reporter:
              Ed Nevill
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved:

                  Estimated:
                  Original Estimate - 1 day
                  1d
                  Remaining:
                  Remaining Estimate - 1 day
                  1d
                  Logged:
                  Time Spent - Not Specified
                  Not Specified