8133935: aarch64: fails to build from source

Add inlucde of oops/oop.inline.hpp to fix build

Reviewed-by: coleenp